--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </header>
 
 <div class="container">
-    <img src="images/page1.png" alt="울산청년연합회 표지">
+    <img src="images/page1.jpg" alt="울산청년연합회 표지">
 </div>
 
 <footer>
