--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </header>
 
 <div class="container">
-    <img src="images/page2.png" alt="울산청년연합회 소개">
+    <img src="images/page2.jpg" alt="울산청년연합회 소개">
 </div>
 
 <footer>
