--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.png" type="image/png" />
     <title>울산청년연합회</title>
     <link rel="stylesheet" href="style.css">
     <style>
@@ -127,7 +127,7 @@
 <body>
 <header>
     <div class="logo">
-        <img src="/images/logo.jpg" alt="로고" />
+        <img src="images/logo.jpg" alt="로고" />
     </div>
     <nav class="navbar">
         <a href="#one" class="anchor-link">홈</a>
