Add initial HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -104,11 +104,15 @@
 
             .logo img {
                 height: 15px; /* 로고 크기 축소 */
+                /* position: absolute;
+                top: 1px;
+                left: 1px; */
+                width: auto;
             }
 
             nav.navbar {
                 display: flex;
-                gap: 50px; /* 메뉴 항목 간 간격 */
+                gap: 10px; /* 메뉴 항목 간 간격 */
             }
 
             nav.navbar a {
