--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 top: 1px;
                 left: 1px; */
                 width: auto;
+                margin-top: 5px;
             }
 
             nav.navbar {
