--- a/index.html
+++ b/index.html
@@ -74,19 +74,7 @@
             font-size: 30px;
             font-weight: bold;
         }
-
-        @media (max-width: 768px) {
-            .navbar a {
-                font-size: 14px;
-                margin: 0 15px;
-            }
-            .logo img {
-                height: 40px;
-            }
-            .org-title {
-                font-size: 18px;
-            }
-        }
+        @media (max-width: 768px) { header nav a { margin: 0 15px; } header { display: flex; align-items: center; justify-content: center; /* 전체 가로 중앙 정렬 */ gap: 20px; /* 요소 간 간격 */ padding: 4px 6px; } .logo img { height: 15px; /* 로고 크기 축소 */ /* position: absolute; top: 1px; left: 1px; */ width: auto; margin-top: 5px; } nav.navbar { display: flex; gap: 30px; /* 메뉴 항목 간 간격 */ } nav.navbar a { font-size: 8px; /* 글자 크기 축소 */ margin: 0; /* 마진 제거 */ } .org-title { font-size: 15px; padding: 5px 5px; } }
     </style>
 </head>
 <body>
